[package]
name = "gemini_flash"
version = "0.1.0"
description = "Client for Google's Gemini-1.5-Flash Generative AI Model"
authors = ["Bittu Kumar"]
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
curl = "0.4.46"
pulldown-cmark = "0.11.0"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"